# data-sandbox

./: .env.example  LICENSE  Makefile  pyproject.toml
data_science/: hackernews_analysis.ipynb  test.ipynb
terraform/: .gitignore  TERRAFORM_SETUP.md  dev.tfvars  main.tf  outputs.tf  variables.tf
