[project]
name = "data-sandbox"
version = "0.1.0"
description = "End-to-end data sandbox: GCP infra, web scraping ingestion, dbt modeling, data science, and Hex"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "google-cloud-bigquery>=3.17",
    "google-cloud-storage>=2.14",
    "pandas>=2.1",
    "dbt-bigquery>=1.7",
    "jupyter>=1.0",
    "matplotlib>=3.8",
    "scikit-learn>=1.4",
    "python-dotenv>=1.0",
    "lxml>=5.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.2",
    "pytest>=8.0",
    "ipykernel>=6.29",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
